src/objects/Siniestro__c.object
<CustomObject>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Culpabilidad__c</fullName>
        <label>Culpabilidad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <label>Poliza</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FechaCierreSiniestro__c</fullName>
        <label>Fecha cierre de siniestro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fechasiniestro__c</fullName>
        <label>Fecha de siniestro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <externalId>true</externalId>
        <label>Folio</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Contrato__c</fullName>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Siniestros</relationshipLabel>
        <relationshipName>Siniestros</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Siniestroactivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siniestro activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TipoSiniestro__c</fullName>
        <label>Tipo de siniestro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colisión</fullName>
                </value>
                <value>
                    <fullName>Robo</fullName>
                </value>
                <value>
                    <fullName>Cristales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Siniestro</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Siniestro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Siniestros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>